# openczjp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bibliography.bib  citation.cff  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: docs.yml  release.yml  test.yml
.notebooks/: Notebook-1-municipal-codes.ipynb  Notebook-2-muni-code-download-func.ipynb  Notebook-3-municipal code-download.ipynb  pandoc.htm  pandoc.txt
.pandoc/: READMEbody.rst  bibliography.rst  conf.py
data/: municipal-codes.csv
docs/: conf.py  index.md  index.rst
docs/backstudy/: conf.py  index.rst
docs/devnotes/: Notebook-1-municipal-codes.html  Notebook-2-muni-code-download-func.html  Notebook-3-municipal code-download.html  conf.py  index.rst
src/openczjp/: __init__.py  estat.py
tests/unit/: test_example.py
