################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "openczjp"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
version = "0.0.2"

description = "A package to generate commuting zones for Japan based on population census data"
authors = [
    { name = "Alan Engel", email = "kijinosu@proton.me" },
]
license = "MIT"
requires-python = ">= 3.14" # Adjust based on the minimum version of Python that you support
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = [
    "estatjp",    
    "Sphinx>=3.5",
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "pybtex>=0.25",
    "pybtex-docutils>=1.0.2",
    "importlib_metadata>=3.6; python_version < '3.10'",
    "pandas>=3.0.1",
    "dotenv>=0.9.9",
]
exclude_patterns = ["_build"]
bibtex_bibfiles = ["bibliography.bib"]

[project.urls]
Homepage = "https://github.com/kijinosu/openczjp"
"Source Code" = "https://github.com/kijinosu/openczjp"
"Bug Tracker" = "https://github.com/kijinosu/openczjp/issues"
Documentation = "https://github.com/kijinosu/openczjp/blob/main/README.md"
# Note: update this url when you have published your package to pypi. (or delete it)
Download = "https://pypi.org/project/openczjp/#files"

[dependency-groups]
dev = [
    "hatch",
    "pre-commit",
]

docs = [
    "nbconvert",
    "nbsphinx",
    "sphinx~=8.0",
    "myst-parser>=4.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib.bibtex",
]

build = [
    "nbconvert",
    "nbsphinx",
    "sphinx~=8.0",
    "myst-parser>=4.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib.bibtex",
    "pip-audit",
    "twine",
]
tests = [
    "pytest",
    "pytest-cov",
    "sphinx-autoapi>=3.6.0",
]


################################################################################
# Tool Configuration
################################################################################

# Hatch is building your package's wheel and sdist
# This tells hatch to only include Python packages (i.e., folders with __init__.py) in the build.
# read more about package building, here:
# https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-distribution-files-sdist-wheel.html
[tool.hatch.build]
only-packages = true

# This tells Hatch to build the package from the src/ directory.
# Read more about src layouts here: https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
[tool.hatch.build.targets.wheel]
packages = ["src/openczjp"]



######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"] # Tells pytest what directory tests are in
markers = ["raises"] # Tells pytest to not raise a warning if you use @pytest.mark.raises

[tool.coverage.paths]
source = [
    "src/openczjp",
    "*/site-packages/openczjp",
]

[tool.coverage.run]
# Ensures code coverage is measured for branches (conditional statements with different outcomes) in your code.
branch = true
parallel = true

[tool.coverage.report]
# This configures the output test coverage report
exclude_lines = ["pragma: no cover"]
precision = 2


# Use UV to create Hatch environments
[tool.hatch.envs.default]
installer = "uv"

################################################################################
# Hatch Environments
################################################################################

#--------------- Build and check your package ---------------#

# This table installs the tools you need to test and build your package
[tool.hatch.envs.build]
description = """Test the installation the package."""
dependencies = [
    "pip",
    "twine",
]
features = [
    "build",
]
detached = true
builder = true

# This table installs created the command hatch run install:check which will build and check your package.
[tool.hatch.envs.build.scripts]
check = [
    "pandoc -f bibtex -t rst bibliography.bib --citeproc --csl .pandoc/styles/apa-no-initials.csl -o .pandoc/bibliography.rst",
    "pandoc -f rst -t gfm .pandoc/READMEbody.rst .pandoc/bibliography.rst -o README.md",
    "pip check",
    "hatch build {args:--clean}",
    "twine check dist/*",
]

#--------------- Run tests ---------------#
[tool.hatch.envs.test]
description = """Run the test suite."""
dependency-groups = [
  "tests",
]

[[tool.hatch.envs.test.matrix]]
python = [ "3.14"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=openczjp --cov-report=term-missing --cov-report=xml}"

#--------------- Build and preview your documentation ---------------#

# This sets up a hatch environment with associated dependencies that need to be installed
[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
# Install optional dependency test for docs
dependency-groups = [
    "docs",
]

# This table contains the scripts that you can use to build and serve your docs
# hatch run docs:build will build your documentation
# hatch run docs:serve will serve them 'live' on your computer locally
[tool.hatch.envs.docs.scripts]
build = [
    "pandoc -f bibtex -t rst bibliography.bib --citeproc --csl .pandoc/styles/apa-no-initials.csl -o .pandoc/bibliography.rst",
    "pandoc -f rst -t gfm .pandoc/READMEbody.rst -o README.md",
    "jupyter nbconvert --to html .notebooks/*.ipynb",
    "mv -f .notebooks/*.html docs/_build/devnotes", # runs in Git bash terminal
    "sphinx-build {args:-W -b html docs docs/_build}"
    ]
serve = ["sphinx-autobuild docs --watch src/openczjp {args:-b html docs/_build/serve}"]



#--------------- Check security for your dependencies ---------------#

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
dependency-groups = [
    "build",
]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]

#----------------sphinxcontrib-bibtex--------------------------------#
last = "sphinxcontrib.bibtex.style.names.last:LastNameStyle"

[project.entry-points."sphinxcontrib.bibtex.style.referencing"]
author_year = "sphinxcontrib.bibtex.style.referencing.author_year:AuthorYearReferenceStyle"
foot = "sphinxcontrib.bibtex.style.referencing.foot:FootReferenceStyle"
label = "sphinxcontrib.bibtex.style.referencing.label:LabelReferenceStyle"
super = "sphinxcontrib.bibtex.style.referencing.super_:SuperReferenceStyle"
